--- a/RealtyAgencyMLS.Web/Resource/AppData.resx
+++ b/RealtyAgencyMLS.Web/Resource/AppData.resx
@@ -117,10 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="String1" xml:space="preserve">
+    <value />
+  </data>
   <data name="usp_GetAllBlogs" xml:space="preserve">
     <value>usp_GetAllBlogs</value>
   </data>
+  <data name="usp_GetAllCulture" xml:space="preserve">
+    <value>usp_GetAllCulture</value>
+  </data>
   <data name="usp_GetSingleBlogDetails" xml:space="preserve">
     <value>usp_GetSingleBlogDetails</value>
+  </data>
+  <data name="usp_GetSingleCultureDetails" xml:space="preserve">
+    <value>usp_GetSingleCultureDetails</value>
   </data>
 </root>
